--- a/post.html
+++ b/post.html
@@ -61,7 +61,7 @@
                         
                         <h2 class="section-heading">The nametags!</h2>
 
-                        <p>I printed my first nametag at the makerlab the day before! Everything went smoothly - it was super easy, and the result was basically perfect, I even got some really pretty colors. I used their computers, and with only two other people learning alongside me, the whole experience was really chill.
+                        <p>I printed my first nametag at the makerlab the day before class. Everything went smoothly - it was super easy, and the result was basically perfect, I even got to use some especially pretty colors. I used their computers, and with only two other people learning alongside me, the whole experience was chill.
 </p>
 <p>
 My second print was a bit more interesting. I wanted to make the nametag smaller since I keep it on my keychain, and the original size was a bit bulky. But I ran into an issue. When I tried to shrink it down, the multicolored design disappeared - it would only print in a single color, as opposed to the base being one color, with the letters another. But when I made it slightly bigger, the multicolor option returned.
@@ -80,6 +80,9 @@ Another thing to note was that the little one had a lot more stringing, but I do
                         <p>
 
 Prediction: My hypothesis is that the print will fail in a couple of ways! First, the overhang will fail - not at the bottom, as the overhang isn’t at a particularly dramatic angle, but instead, further near the top (perhaps the third spike from the top or so? I definitely think it will fail once the ends get especially thin). The second way that I think it will fail is that it will droop down badly, if not failing into spaghetti, when the spikes become two pronged. I would be really surprised if the printer can handle such thin and pushed out structures.
+</p>
+<a href="#!"><img class="img-fluid" src="assets/img/ogdesign.jpg" alt="..." /></a>
+                        <span class="caption text-muted">The model</span>
 <p>
 Observations: 
  A few failure modes occurred!
