--- a/post.html
+++ b/post.html
@@ -81,7 +81,7 @@ Another thing to note was that the little one had a lot more stringing, but I do
 
 Prediction: My hypothesis is that the print will fail in a couple of ways! First, the overhang will fail - not at the bottom, as the overhang isn’t at a particularly dramatic angle, but instead, further near the top (perhaps the third spike from the top or so? I definitely think it will fail once the ends get especially thin). The second way that I think it will fail is that it will droop down badly, if not failing into spaghetti, when the spikes become two pronged. I would be really surprised if the printer can handle such thin and pushed out structures.
 </p>
-<a href="#!"><img class="img-fluid" src="assets/img/ogdesign.jpg" alt="..." /></a>
+<a href="#!"><img class="img-fluid" src="assets/ogdesign.jpg" alt="..." /></a>
                         <span class="caption text-muted">The model</span>
 <p>
 Observations: 
