--- a/post.html
+++ b/post.html
@@ -61,16 +61,16 @@
                         
                         <h2 class="section-heading">The nametags!</h2>
 
-                        <p>I printed my first nametag at the makerlab the day before class. Everything went smoothly - it was super easy, and the result was basically perfect, I even got to use some especially pretty colors. I used their computers, and with only two other people learning alongside me, the whole experience was chill.
+                        <p>I printed my first nametag at the makerlab the day before class. Everything went smoothly - it was super easy, and the result was basically perfect, I even got to use some especially pretty colors. I used their computers, and with only two other people learning alongside me, the whole experience was very relaxed.
 </p>
 <p>
-My second print was a bit more interesting. I wanted to make the nametag smaller since I keep it on my keychain, and the original size was rather bulky. But I ran into an issue. When I tried to shrink it down, the multicolored design disappeared - it would only print in a single color, as opposed to the base being one color with the letters another. But when I made it slightly bigger, the multicolor option returned.
+My second print was a bit more interesting. I wanted to make the nametag smaller since I keep it on my keychain, and the original size was rather bulky. However, I ran into an issue. When I tried to shrink it down, the multicolored design disappeared - it would only print in a single color, as opposed to the base being one color with the letters another. But when I made it slightly bigger, the multicolor option returned.
 </p>
 <p>
 So, I printed it! Unexpectedly, the first two layers of the letters were the same as the base color, and only the next two used the alternate color. Thus, I hypothesized that the way the design controlled color was through a height threshold: at a certain height, the print switches color, rather than switching after completing one component of the design. This should typically work, as it’s typically printed at just one size. I tested this idea by comparing the two nametags side by side. Both had a base color which stopped at the same height, ignoring the other structural aspects of the nametags, supporting my hypothesis.
 </p>
 <p>
-Another thing to note was that the little one had a lot more stringing, but I don’t really care about stringing here, so that’s ok.
+Another thing to note was that the little one seemed to have more visible stringing, but I don’t really care about stringing here, so that’s ok.
 </p>
 <p>
 <a href="#!"><img class="img-fluid" src="assets/img/Name.jpg" alt="..." /></a>
@@ -79,7 +79,7 @@ Another thing to note was that the little one had a lot more stringing, but I do
                         <h2 class="section-heading">The torture test :0</h2>
                         <p>
 
-Prediction: My hypothesis is that the print will fail in a couple of ways! First, the overhang will fail - not at the bottom, as the overhang isn’t at a particularly dramatic angle, but instead, further near the top (perhaps the third spike from the top or so? I definitely think it will fail once the ends get super thin). The second way that I think it will fail is that it will droop down badly, if not failing into spaghetti, at the pronged bits up top. I would be really surprised if the printer can handle such thin and pushed out structures.
+Prediction: My hypothesis is that the print will fail in a couple of ways! First, the overhang will fail - not at the bottom, as the overhang isn’t at a particularly dramatic angle, but instead, further near the top (perhaps the third spike from the top or so? I definitely think it will fail once the ends get super thin). The second way that I think it will fail is that it will droop down badly, if not failing into spaghetti, at the two-pronged bits up top. I would be really surprised if the printer can handle such thin and pushed out structures.
 </p>
 <a href="#!"><img class="img-fluid" src="assets/ogdesign.jpg" alt="..." /></a>
                         <span class="caption text-muted">The model</span>
@@ -88,7 +88,7 @@ Observations:
  A few failure modes occurred!
 </p>
 <p>
-My predictions were partially right. Interestingly, the first failure began on the spike I predicted. It failed with drooping. The underside of the spike looked beaded, and some spikes quickly became rounded. Also, random oval-y protrusions came out from where there weren’t even meant to be spikes. 
+My predictions were partially right. Interestingly, the first failure began on the spike I predicted. It failed with drooping. The underside of the spike looked beaded, and some spikes quickly became round. Also, random oval-like protrusions came out from where there weren’t even meant to be spikes. 
 </p>
 
 <p>
