--- a/post.html
+++ b/post.html
@@ -79,7 +79,7 @@ Another thing to note was that the little one seemed to have more visible string
                         <h2 class="section-heading">The torture test :0</h2>
                         <p>
 
-Prediction: My hypothesis is that the print will fail in a couple of ways! First, the overhang will fail - not at the bottom, as the overhang isn’t at a particularly dramatic angle, but instead, further near the top (perhaps the third spike from the top or so? I definitely think it will fail once the ends get super thin). The second way that I think it will fail is that it will droop down badly, if not failing into spaghetti, at the two-pronged bits up top. I would be really surprised if the printer can handle such thin and pushed out structures.
+Prediction: My hypothesis is that the print will fail in a couple of ways! First, the overhang will fail - not at the bottom, as the overhang isn’t at a particularly dramatic angle, but instead, further near the top (perhaps the third spike from the top or so). I definitely think it will fail before the ends get super thin, where they look to be equivalent to one or two layers or plastic. I think it will droop down badly, if not failing into spaghetti, at the two-pronged bits up top. I would be really surprised if the printer can handle such thin and pushed out structures.
 </p>
 <a href="#!"><img class="img-fluid" src="assets/ogdesign.jpg" alt="..." /></a>
                         <span class="caption text-muted">The model</span>
