--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Sample Post</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
-    -->
+
         <!-- Page Header-->
         <header class="masthead" style="background-image: url('assets/img/Slave-ship.jpg')">
             <div class="container position-relative px-4 px-lg-5">
