--- a/post.html
+++ b/post.html
@@ -17,10 +17,10 @@
     </head>
     <body>
         <!-- Navigation-->
-        <!--
+        
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Hi! :3</a>
+                <a class="navbar-brand" href="index.html">Main page :3</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </nav>
-    -->
+    
         <!-- Page Header-->
         <header class="masthead" style="background-image: url('https://collectionapi.metmuseum.org/api/collection/v1/iiif/437514/796412/main-image')">
             <div class="container position-relative px-4 px-lg-5">
@@ -158,3 +158,5 @@ In addition, I learned that the 3MF format is editable, rather than just storing
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
+<p> </p>
