--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="index.html">Hi</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                  <!--  Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
                 
-                </div>
+                </div> -->
             </div>
         </nav>
 
