--- a/post.html
+++ b/post.html
@@ -22,21 +22,21 @@
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="index.html">Main page :3</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                  <!--  Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <!--
+                    
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Sample Post</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
-    -->
+
     
         <!-- Page Header-->
         <header class="masthead" style="background-image: url('https://collectionapi.metmuseum.org/api/collection/v1/iiif/437514/796412/main-image')">
