--- a/Project 2.html
+++ b/Project 2.html
@@ -68,7 +68,7 @@
                    </p>
 
                    <p>
-<a href="#!"><img class="img-fluid" src="assets/img/lilguy1.jpg" alt="..." /></a>
+<a href="#!"><img class="img-fluid" src="assets/img/lilguy1.png" alt="..." /></a>
 </p>
 </p>
 <p>
