--- a/Project 2.html
+++ b/Project 2.html
@@ -46,8 +46,8 @@
                             <h2 class="subheading">Nametag and torture test summary</h2>
                             <span class="meta">
                                 Posted by
-                                <a href="#!">Zoe</a>
-                                on September 6th, 2024
+                                <a href="#!">Z</a>
+                                on September 17th, 2024
                             </span>
                         </div>
                     </div>
@@ -84,8 +84,7 @@ On the point of 3D printing settings, I used organic supports with .3 top contac
 
 I’m really happy with the final print! It’s not the right color, but I’ll paint it. :) I plan to make a few more of these (friends have asked for copies), and if I had more time, I would change the base to look more natural. Also,  In my sketch, the ratio of cap to stalk was higher, and I’d love to see if I could make one in which that was the case, though I think it would be a bit harder to print. But, all in all, it does what it’s meant to do, and looks cute doing it!
 </p>
-]
-image
+<a href="#!"><img class="img-fluid" src="assets/img/lilguy2.jpg" alt="..." /></a>
 <p>
 While with the first design, I learned tons about the physical aspects of 3D printing, the second design is primarily where I learned about CAD. Fundamentally, the software I was using wasn’t built for what I set out to do. My goal was to print a ridiculously intricate frame for my frozen pea bag (which I still plan to do!!), with the words “Live, Laugh, Legumes”, but Fusion couldn’t handle even .01% of the triangles in the mesh of the frames I was working from. 
 </p>
