--- a/Project 2.html
+++ b/Project 2.html
@@ -91,10 +91,13 @@ I’m really happy with the final print! It’s not the right color, but I’ll 
 <p>
 While with the first design, I learned tons about the physical aspects of 3D printing, the second design is primarily where I learned about CAD. Fundamentally, the software I was using wasn’t built for what I set out to do. My goal was to print a ridiculously intricate frame for my frozen pea bag (which I still plan to do!!), with the words “Live, Laugh, Legumes”, but Fusion couldn’t handle even .01% of the triangles in the mesh of the frames I was working from. 
 </p>
-image
+<a href="#!"><img class="img-fluid" src="assets/img/triangles.jpg" alt="..." /></a>
 <p>
 Because of this, I learned a lot more about what types of models to try to bring into Fusion! I tried working with 5-10 different frames before settling on one that was just a rectangle. (I tried a couple frames before which I thought were simple rectangles, but they weren’t! I was bamboozled!) I added my text – initially in the conventional ‘Live Laugh Love’ cursive – but this didn’t want to print, as the letters were too thin. So, I settled on a traditional horror font, as I felt it captured the essence of the state of the project.
 </p>
+<p>
+   <a href="#!"><img class="img-fluid" src="assets/img/lll2.jpg" alt="..." /></a>
+</p> 
 <p>
 
 All the print settings were the same as the final print of my chantrelle. I printed it almost at the edge of the 7x7 print bed! Possibly because of this, the first time I tried to print it, the edge was a little funky, so I cancelled after a few minutes. The second print turned out fine. 
