--- a/Project 2.html
+++ b/Project 2.html
@@ -107,7 +107,8 @@ I will definitely remake this!! I want to take this into software that can handl
 </p>
 
 <p>
-   <a href="#!"><img class="img-fluid" src="assets/img/lll3.jpg" alt="..." /></a>
+   <a href="#!"><img class="img-fluid" src="assets/img/lll3.jpg" alt="..." /></a>\
+   <span class="caption text-muted">The frame atop my beloved bag for frozen peas</span>
 </p> 
 
 </p>    
