--- a/Project 2.html
+++ b/Project 2.html
@@ -64,7 +64,7 @@
                         
 
                         <p>
-                       The first project was both fun and simple to design! My original sketch featured a lil chantrelle being with swords and holes on the edge of their cap, to put earrings in the holes and rings or any earrings that didn’t work on the swords. I was designing this for my roommate, who’s favorite mushrooms are chantrelles. :) Choosing the base took quite a while, but it ended up being really close to what I envisioned for the final product! I added holes in the cap for earrings, as well as some swords and eyes. After slicing, I saw that the swords were too thin, so I changed the sword design, to make them thicker.
+                       The first project was both fun and simple to design! My original sketch featured a lil chantrelle sprite with swords and holes on the edge of their cap, to put earrings in the holes and rings or any earrings that didn’t work on the swords. I was designing this for my roommate, whose favorite mushrooms are chantrelles. :) Choosing the base model took quite a while, but it ended up being really close to what I envisioned for the final product! I added holes in the cap for earrings, as well as some swords and eyes. After slicing, I saw that the swords were too thin, so I changed the sword design, to make them thicker.
                    </p>
 
                    <p>
@@ -82,14 +82,14 @@ On the point of 3D printing settings, I used organic supports with .3 top contac
 </p>
 <p>
 
-I’m really happy with the final print! It’s not the right color, but I’ll paint it. :) I plan to make a few more of these (friends have asked for copies), and if I had more time, I would change the base to look more natural. Also,  In my sketch, the ratio of cap to stalk was higher, and I’d love to see if I could make one in which that was the case, though I think it would be a bit harder to print. But, all in all, it does what it’s meant to do, and looks cute doing it! 
+I’m really happy with the final print! It’s not the right color, but I’ll paint it. :) I plan to make a few more of these (friends have asked for copies), and if I had more time, I would change the base to look more natural. Also,  in my sketch, the ratio of cap width to stalk width was higher, and I’d love to see if I could make one in which that was the case, though I think it would be a bit harder to print. But, all in all, it does what it’s meant to do, and looks cute doing it! 
 </p>
 <p>
 <a href="#!"><img class="img-fluid" src="assets/img/lilguy2.jpg" alt="..." /></a>
 <span class="caption text-muted">The final guy! To be painted.</span>
 </p>
 <p>
-While with the first design, I learned tons about the physical aspects of 3D printing, the second design is primarily where I learned about CAD. Fundamentally, the software I was using wasn’t built for what I set out to do. My goal was to print a ridiculously intricate frame for my frozen pea bag (which I still plan to do!!), with the words “Live, Laugh, Legumes”, but Fusion couldn’t handle even .01% of the triangles in the mesh of the frames I was working from. 
+While with the first design, I learned tons about the physical aspects of 3D printing, the second design is primarily where I learned about CAD. Fundamentally, the software I was using wasn’t built for what I set out to do. My goal was to print a ridiculously intricate frame for my frozen pea bag (which I still plan to do!!), with the words “Live, Laugh, Legumes”, but Fusion couldn’t handle even .1% of the triangles in the mesh of the frames I was working from. 
 </p>
 <a href="#!"><img class="img-fluid" src="assets/img/triangles.jpg" alt="..." /></a>
 <p>
