--- a/Project 2.html
+++ b/Project 2.html
@@ -37,7 +37,7 @@
         </nav>
      
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('https://cdn.shopify.com/s/files/1/0308/7889/2172/t/14/assets/description_image_1280px_Joseph_Mallord_William_Turner_English___The_Burning_of_the_Houses_of_Lords_and_Commons_October_16_1834___Google_Art_Project.jpg?v=1595763943')">
+        <header class="masthead" style="background-image: url('https://d2mpxrrcad19ou.cloudfront.net/item_images/1140997/11661214_fullsize.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
