--- a/Project 3.html
+++ b/Project 3.html
@@ -72,7 +72,7 @@ Initially, the clock didn’t work. It would light up incorrectly and make a squ
                    </p>
 
                    <p>
-<a href="#!"><img class="img-fluid" src="assets/img/soldering.jpg" alt="..." /></a>
+<a href="#!"><img class="img-fluid" src="assets/img/3img2.jpg" alt="..." /></a>
 <span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 </p>
