--- a/Project 3.html
+++ b/Project 3.html
@@ -72,50 +72,64 @@ Initially, the clock didn’t work. It would light up incorrectly and make a squ
                    </p>
 
                    <p>
-<a href="#!"><img class="img-fluid" src="assets/img/3img2.jpg" alt="..." /></a>
+<a href="#!"><img class="img-fluid" src="assets/img/soldering.jpg" alt="..." /></a>
 <span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 </p>
 <p>
 
-The primary arena in which I learned was in the actual printing! When I went into the MakerLab to try and print it, the fabulous Avery (of the 3D printing club) was there and able to help out. We ran into quite a lot of issues, and because of that, I got to learn a ton about how the Prusa  Mini actually works. The biggest recurring issue was that the filament just didn’t want to extrude. So, I learned about how filament can get chewed up by the gear, and got to remove the Bowden tube, clear the nozzle, and do a bunch more troubleshooting. Eventually, Avery left, which worked out well— many of the same complications arose, so I was able to practice solving them myself. In the end, we deemed it a filament issue, as the same set of issues occurred for 3 different printers (with both the print and a first layer calibration test). When I printed it in a different filament, it worked great!  
 
+Before getting started, I took measurements of my clock. Initially, my notes were pretty messy, I wrote them a few different ways - here’s an example of how it evolved! The first image has a design for the board, and one of a lid design. The second just has the board. For context, I actually kept the styrofoam from the soldering kit to use as a supportive backing in the box - this can be seen on the right of the board in the second image.
 
-</p>
-<p>
-On the point of 3D printing settings, I used organic supports with .3 top contact z distance to make the supports easy to remove, which they were! I was a bit worried about the swords getting pulled off when removing supports, as their hilts are rather thin. But, they held strong. At one point, I messed with the settings for the support density to see what would happen. I set it low, somewhere below 40%, and on the first layer, it got messed up. So, I set it higher, at 80%, and all was well. 
-</p>
-<p>
-
-I’m really happy with the final print! It’s not the right color, but I’ll paint it. :) I plan to make a few more of these (friends have asked for copies), and if I had more time, I would change the base to look more natural. Also,  in my sketch, the ratio of cap width to stalk width was higher, and I’d love to see if I could make one in which that was the case, though I think it would be a bit harder to print. But, all in all, it does what it’s meant to do, and looks cute doing it! 
 </p>
 <p>
 <a href="#!"><img class="img-fluid" src="assets/img/lilguy2.jpg" alt="..." /></a>
 <span class="caption text-muted">The final guy! To be painted.</span>
 </p>
 <p>
-While with the first design, I learned tons about the physical aspects of 3D printing, the second design is primarily where I learned about CAD. Fundamentally, the software I was using wasn’t built for what I set out to do. My goal was to print a ridiculously intricate frame for my frozen pea bag (which I still plan to do!!), with the words “Live, Laugh, Legumes”, but Fusion couldn’t handle even .1% of the triangles in the mesh of the frames I was working from. 
+For the first box, we chose to do the work independently, but met up outside of class to work on it together. I think that this led to a better learning outcome than potential alternatives. As we both had to make our own boxes, we each got to learn fusion ourselves, without one person taking over the work. But, we were still able to help one another through the process and compare designs.
+
+</p>
+<p>
+
+The first box didn’t work because I mistyped a measurement -- 50 instead of 55. Lesson has been learned - double check the numbers! The second one worked great, though. The tolerance was tight, and the lid perfectly slotted into place. (Interestingly, while I didn’t change anything between the lid design of the second and third boxes, the third’s was a bit looser, and didn’t ‘click’ into place quite as perfectly.) Then, I decided to make a third design, adding buttons, which worked wonderfully. (Makes a fabulous little click!)
+
+</p>
+<p>
+<a href="#!"><img class="img-fluid" src="assets/img/lilguy2.jpg" alt="..." /></a>
+<span class="caption text-muted">The final guy! To be painted.</span>
+</p>
+<p>
+When it comes to the printing, I accidentally allowed it to have supports inside the box - this was kinda annoying to get rid of, and I’ll change the settings next time. For some reason, this was only an issue on my last print. Besides that, it worked great. I also set my top contact z distance to .3 and used organic supports.
+
 </p>
 <a href="#!"><img class="img-fluid" src="assets/img/triangles.jpg" alt="..." /></a>
 <p>
-Because of this, I learned a lot more about what types of models to try to bring into Fusion! I tried working with 5-10 different frames before settling on one that was just a rectangle. (I tried a couple frames before which I thought were simple rectangles, but they weren’t! I was bamboozled!) I added my text – initially in the conventional ‘Live Laugh Love’ cursive – but this didn’t want to print, as the letters were too thin. So, I settled on a traditional horror font, as I felt it captured the essence of the state of the project.
+Now, to the next set of boxes! The first box that I laser cut actually worked perfectly! Well.. except for the fact that I forgot to add a bottom - it only had sides. But, I found it aesthetically appealing, and even though I added some little support triangles to keep it standing, it didn’t wind up needing them! It also had some sections where the material was really thin. I dropped it, and one of those sections broke, and the box no longer fit together. I adore making art with the constraint of using “trash,” so I decided to make the unused pieces of the box into the following little guy! I call him Phreaky Phil. I include this for two reasons: first, I forgot to take a photo of the initial box. This is the primary reason. Second, I thought it related to our discussions about reuse! I got to give these scraps a new life, albeit in a not particularly environmentally friendly way, given all the superglue I used. My first thought after making him was that I might try to make a fully compostable piece using laser cut MDF, as it was such a fun medium, but it’s apparently made with a formaldehyde-based resin. Side note: I’m not actually certain if we used MDF. I think it was, but if not, ignore this section, I suppose. Apparently, this leads to a solid number of issues. This makes it not particularly compostable, given that formaldehyde is a known carcinogen. Additionally, formaldehyde continues to offgas for a really long time - for this reason, and since MDF is susceptible to water, it’s often recommended that MDF is painted to seal it in. MDF also releases VOCs for at least the first few months after manufacture. I find this rather sad - we’re turning all this biodegradable wood into something that will wind up in a landfill. At least it can be recycled into more MDF? I’ve found this class interesting, as it often makes me think a lot more in depth about the specific materials we’re working with, as well as those that surround me.
 </p>
 <p>
    <a href="#!"><img class="img-fluid" src="assets/img/lll2.jpg" alt="..." /></a>
 </p> 
 <p>
 
-All the print settings were the same as the final print of my chantrelle. I printed it almost at the edge of the 7x7 print bed! Possibly because of this, the first time I tried to print it, the edge was a little funky, so I cancelled after a few minutes. The second print turned out fine.  
+also moved the place for the a plug just a bit. I’m very happy with my final design. It balances nicely, looks cute, and the buttons from my 3d printed box fit into it perfectly!
 </p>
-<p>
-I will definitely remake this!! I want to take this into software that can handle the organic shapes, and make this a truly grand piece of wall decor. I’m talking a light green, ornate masterpiece that will be at least a foot (perhaps a foot and a half) tall, laden with fake pearls and greenery. The peas will get the respect they deserve.
-</p>
+
 
 <p>
    <a href="#!"><img class="img-fluid" src="assets/img/lll3.jpg" alt="..." /></a>\
    <span class="caption text-muted">The frame atop my beloved bag for frozen peas</span>
 </p> 
 
+<p>
+Then.. I plugged it in. After completing this write-up, I realized I hadn’t gotten a photo of the clock both on and in the completed box. So, I plugged it in! But, it had a similar error as the one I originally had - lit up only partially, in red (I’m not sure if that’s the color it’s meant to be), and started squealing. I’ll probably go to an office hours session sometime soon to fix it and update my website. But, for now, the site will remain without a plugged in, finished photo.
+</p>
+<p>
+
+One last thing to note! The only thing I do regret: not adding engravings to my 2nd (or even first) cut. I find myself almost irrationally icked out by wasting material, so I didn’t want to add engravings and then cut again. I wish I had gone for my ambitions originally - I don’t think anything would have gone wrong in a way which wasn’t a learning opportunity!
+</p>
+<p>
+    Summary: learned a lot, yay :D 
 </p>    
 
 
