--- a/Project 3.html
+++ b/Project 3.html
@@ -83,7 +83,7 @@ Before getting started, I took measurements of my clock. Initially, my notes wer
 
 </p>
 <p>
-<a href="#!"><img class="img-fluid" src="assets/img/lilguy2.jpg" alt="..." /></a>
+<a href="#!"><img class="img-fluid" src="assets/img/3img2.jpg" alt="..." /></a>
 <span class="caption text-muted">The final guy! To be painted.</span>
 </p>
 <p>
@@ -96,19 +96,18 @@ The first box didn’t work because I mistyped a measurement -- 50 instead of 55
 
 </p>
 <p>
-<a href="#!"><img class="img-fluid" src="assets/img/lilguy2.jpg" alt="..." /></a>
+<a href="#!"><img class="img-fluid" src="assets/img/3img3.jpg" alt="..." /></a>
 <span class="caption text-muted">The final guy! To be painted.</span>
 </p>
 <p>
 When it comes to the printing, I accidentally allowed it to have supports inside the box - this was kinda annoying to get rid of, and I’ll change the settings next time. For some reason, this was only an issue on my last print. Besides that, it worked great. I also set my top contact z distance to .3 and used organic supports.
 
 </p>
-<a href="#!"><img class="img-fluid" src="assets/img/triangles.jpg" alt="..." /></a>
 <p>
 Now, to the next set of boxes! The first box that I laser cut actually worked perfectly! Well.. except for the fact that I forgot to add a bottom - it only had sides. But, I found it aesthetically appealing, and even though I added some little support triangles to keep it standing, it didn’t wind up needing them! It also had some sections where the material was really thin. I dropped it, and one of those sections broke, and the box no longer fit together. I adore making art with the constraint of using “trash,” so I decided to make the unused pieces of the box into the following little guy! I call him Phreaky Phil. I include this for two reasons: first, I forgot to take a photo of the initial box. This is the primary reason. Second, I thought it related to our discussions about reuse! I got to give these scraps a new life, albeit in a not particularly environmentally friendly way, given all the superglue I used. My first thought after making him was that I might try to make a fully compostable piece using laser cut MDF, as it was such a fun medium, but it’s apparently made with a formaldehyde-based resin. Side note: I’m not actually certain if we used MDF. I think it was, but if not, ignore this section, I suppose. Apparently, this leads to a solid number of issues. This makes it not particularly compostable, given that formaldehyde is a known carcinogen. Additionally, formaldehyde continues to offgas for a really long time - for this reason, and since MDF is susceptible to water, it’s often recommended that MDF is painted to seal it in. MDF also releases VOCs for at least the first few months after manufacture. I find this rather sad - we’re turning all this biodegradable wood into something that will wind up in a landfill. At least it can be recycled into more MDF? I’ve found this class interesting, as it often makes me think a lot more in depth about the specific materials we’re working with, as well as those that surround me.
 </p>
 <p>
-   <a href="#!"><img class="img-fluid" src="assets/img/lll2.jpg" alt="..." /></a>
+   <a href="#!"><img class="img-fluid" src="assets/img/3img4.jpg" alt="..." /></a>
 </p> 
 <p>
 
@@ -117,7 +116,7 @@ also moved the place for the a plug just a bit. I’m very happy with my final d
 
 
 <p>
-   <a href="#!"><img class="img-fluid" src="assets/img/lll3.jpg" alt="..." /></a>\
+   <a href="#!"><img class="img-fluid" src="assets/img/3img5.jpg" alt="..." /></a>\
    <span class="caption text-muted">The frame atop my beloved bag for frozen peas</span>
 </p> 
 
