--- a/Project 3.html
+++ b/Project 3.html
@@ -111,12 +111,12 @@ Now, to the next set of boxes! The first box that I laser cut actually worked pe
 </p> 
 <p>
 
-also moved the place for the a plug just a bit. I’m very happy with my final design. It balances nicely, looks cute, and the buttons from my 3d printed box fit into it perfectly!
+also moved the place for the a plug just a bit. I’m very happy with my final design. It balances nicely, looks cute, and the buttons from my 3d printed box fit into it perfectly! 
 </p>
 
  
 <p>
-   <a href="#!"><img class="img-fluid" src="assets/img/3img5.jpg" alt="..." /></a>\
+   <a href="#!"><img class="img-fluid" src="assets/img/3img5.jpg" alt="..." /></a>
 
 </p> 
 
