--- a/Project 3.html
+++ b/Project 3.html
@@ -108,11 +108,11 @@ Now, to the next set of boxes! The first box that I laser cut actually worked pe
 </p>
 <p>
    <a href="#!"><img class="img-fluid" src="assets/img/3img4.jpg" alt="..." /></a>
+   <span class="caption text-muted">Phriendly Phil</span>
 </p> 
 <p>
 
-also moved the place for the a plug just a bit. I’m very happy with my final design. It balances nicely, looks cute, and the buttons from my 3d printed box fit into it perfectly! 
-</p>
+Anyways! Onto my second iteration. Here, I added a base and took away the support triangles. I also moved the place for the a plug just a bit. I’m very happy with my final design. It balances nicely, looks cute, and the buttons from my 3d printed box fit into it perfectly!</p>
 
  
 <p>
