--- a/PreProject5.html
+++ b/PreProject5.html
@@ -77,7 +77,17 @@
 					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
+
+
+
+
+<h2 class="section-heading">1. Evidence of design for navigation without one or more of the 5 senses</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
+
+
 
 
 
