--- a/PreProject5.html
+++ b/PreProject5.html
@@ -38,7 +38,7 @@
      
         <!-- Page Header-->
 
-     <header class="masthead" style="background-image: url('assets/img/caillebotte.jpg')">
+     <header class="masthead" style="background-image: url('https://www.art-prints-on-demand.com/kunst/gustave_caillebotte/1-fassadenmaler.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
