--- a/PreProject5.html
+++ b/PreProject5.html
@@ -73,7 +73,7 @@
 </p>
 
 
-<h2 class="section-heading">1. Evidence of design for navigation without one or more of the 5 senses</h2>
+<h2 class="section-heading">2. Evidence of design for forms of assistance, broadly defined</h2>
                    <p>
 					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
@@ -82,7 +82,61 @@
 
 
 
-<h2 class="section-heading">1. Evidence of design for navigation without one or more of the 5 senses</h2>
+<h2 class="section-heading">3. Evidence of design for aging, broadly defined</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">4. Evidence of design for young children</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">5. Evidence of design for wheeled mobile gear</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">6. Evidence of design with physical barriers</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">7. Evidence of design with a lack of information</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">8. Evidence of design with an absence of help</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">9. Evidence of design for historical specificity</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">10. Evidence of design for environmental sustainability</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">11. Evidence of design for health and well-being</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+<h2 class="section-heading">12. Evidence of design for intercultural community building</h2>
                    <p>
 					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
