--- a/PreProject5.html
+++ b/PreProject5.html
@@ -71,11 +71,15 @@
 					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
+<p>
+					<a href="#!"><img class="img-fluid" src="assets/img/1.2noisy.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
 
 
 <h2 class="section-heading">2. Evidence of design for forms of assistance, broadly defined</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/2allergy.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
@@ -84,13 +88,21 @@
 
 <h2 class="section-heading">3. Evidence of design for aging, broadly defined</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.3.1 button" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
 <h2 class="section-heading">4. Evidence of design for young children</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.4.1 pencil.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+       <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.4.2 painting.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+       <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.4.3 baby changing.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
