--- a/PreProject5.html
+++ b/PreProject5.html
@@ -108,19 +108,19 @@
 
 <h2 class="section-heading">5. Evidence of design for wheeled mobile gear</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.5.1 fountain.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
 <h2 class="section-heading">6. Evidence of design with physical barriers</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.6.1 hallway.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
 <h2 class="section-heading">7. Evidence of design with a lack of information</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.7.1pantry.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
