--- a/PreProject5.html
+++ b/PreProject5.html
@@ -88,7 +88,7 @@
 
 <h2 class="section-heading">3. Evidence of design for aging, broadly defined</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/4.3.1 button" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.3.1 button.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
@@ -126,31 +126,31 @@
 
 <h2 class="section-heading">8. Evidence of design with an absence of help</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.8.1stairs.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
 <h2 class="section-heading">9. Evidence of design for historical specificity</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.9.1chapel.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
 <h2 class="section-heading">10. Evidence of design for environmental sustainability</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.10.1bike.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
 <h2 class="section-heading">11. Evidence of design for health and well-being</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.11.1blue.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
 <h2 class="section-heading">12. Evidence of design for intercultural community building</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.11.1pads.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
