--- a/PreProject5.html
+++ b/PreProject5.html
@@ -69,7 +69,7 @@
 <h2 class="section-heading">1. Evidence of design for navigation without one or more of the 5 senses</h2>
                    <p>
 					<a href="#!"><img class="img-fluid" src="assets/img/1.1yellow.jpg" alt="..." /></a>
-					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+					<span class="caption text-muted">Somblah blasjsdfksdbjfskd
 </p>
 <p>
 					<a href="#!"><img class="img-fluid" src="assets/img/1.2noisy.jpg" alt="..." /></a>
