--- a/PreProject5.html
+++ b/PreProject5.html
@@ -148,9 +148,15 @@
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
-<h2 class="section-heading">12. Evidence of design for intercultural community building</h2>
                    <p>
 					<a href="#!"><img class="img-fluid" src="assets/img/4.11.1pads.jpg" alt="..." /></a>
+					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+</p>
+
+
+<h2 class="section-heading">12. Evidence of design for intercultural community building</h2>
+                   <p>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.12.1flags.jpg" alt="..." /></a>
 					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
 </p>
 
