--- a/PreProject5.html
+++ b/PreProject5.html
@@ -137,7 +137,14 @@ This is compelling to me, though I wouldn’t be surprised if the movements of t
 <h2 class="section-heading">7. Evidence of design with a lack of information</h2>
                    <p>
 					<a href="#!"><img class="img-fluid" src="assets/img/4.7.1pantry.jpg" alt="..." /></a>
-					<span class="caption text-muted">Some soldering photos - genuinely so proud :)</span>
+					
+					<p>
+						Here, we selected the allergen free pantry, as I had the experience of not knowing about it until a month or so into classes. This isn’t surprising, though, as I don’t believe I had informed the school of my dietary needs. What *was* surprising is that multiple people I know had documented their celiac with the school and got no notification that this measure existed, which is disappointing!
+						</p>
+						<p>
+
+
+(I’m realizing that it may not actually be what was initially meant in this prompt - perhaps you were aiming for evidence for design with an intentional lack of information.)
 </p>
 
 <h2 class="section-heading">8. Evidence of design with an absence of help</h2>
