--- a/PreProject5.html
+++ b/PreProject5.html
@@ -128,7 +128,7 @@ I did find this very reputable reddit thread <a href="https://www.reddit.com/r/A
 “Brutalists favored complex circulation within their buildings, with the aim of fostering community. Exterior walls of load-bearing concrete permitted the creation of intricately designed interior spaces. Labyrinthine hallways, interior atriums, catwalks, and mezzanines, which were intended to add visual interest and spatial complexity, fed the rumors of the creation of an architecture of manipulation and control, leading to the creation of the “riot-proof” building myth.”
 </p>
 <p>
-Another <a href="http://bulletin-archive.kenyon.edu/x3212.html/">source</a> expands on this with the idea that “the kinks in the halls are meant to define "neighborhoods" of nine dorm rooms, a strategy to "humanize" a large dorm building, as Rohlfing put it.”
+<a href="http://bulletin-archive.kenyon.edu/x3212.html/">Another source</a> expands on this with the idea that “the kinks in the halls are meant to define "neighborhoods" of nine dorm rooms, a strategy to "humanize" a large dorm building, as Rohlfing put it.”
 </p>
 <p>
 This is compelling to me, though I wouldn’t be surprised if the movements of the time also had an impact on the trend.
@@ -180,10 +180,15 @@ Usen Castle was built specifically to reference Lismore Castle, which is in irel
 </p>
 <h2 class="section-heading">12. Evidence of design for intercultural community building</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/4.12.1flags.jpg" alt="..." /></a>
-					<span class="caption text-muted">Some  photos - genuinely so proud :)</span>
-</p>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.9.1chapel.jpg" alt="..." />
+						<p>First, the chapels -- specifically, the three dedicated to Jewish, Protestant, and Catholic faiths -- were built specifically to shape Brandeis to celebrate different faiths. They were built equal in size and such that their shadows would never overlap one another. Yet, they’re also built close together, with a central pond to reflect the shared nature of the space.
 
+</p>
+<p>
+					<a href="#!"><img class="img-fluid" src="assets/img/4.12.1flags.jpg" alt="..." />
+						<p>
+<p>Another example of this is this room with flags in a building I forget the name of -- perhaps Rabb Graduate Center? Anyways, this space is central, it has a podium, such that talks can be hosted, and individual chairs for folks to hang out together in. The flags surround this community space, emphasizing the importance that the university places on intercultural involvement.
+</p>
 
 
 
