--- a/PreProject5.html
+++ b/PreProject5.html
@@ -156,7 +156,7 @@ This is compelling to me, though I wouldn’t be surprised if the movements of t
 
 <h2 class="section-heading">9. Evidence of design for historical specificity</h2>
                    <p>
-					<a href="#!"><img class="img-fluid" src="assets/img/4.9.1chapel.jpg" alt="..." /></a>
+					<a href="#!"><img class="img-fluid" src="assets/img/castle.jpg" alt="..." /></a>
 			<p>
 
 Usen Castle was built specifically to reference Lismore Castle, which is in ireland. This is a really clear example of appealing to historical specificity! Apparently, the founder of Middlesex University fell in love with Lismore Castle while traveling through Ireland, and wanted to replicate it at home. But, the owners wouldn’t allow him to have the blueprints. So, he commissioned drawings of the exterior of the castle, constructing ours built off of it! This is likely why the interior is a bit of a mess, and there are such random, slightly nonsensical details scattered about it.
