--- a/PreProject5.html
+++ b/PreProject5.html
@@ -182,14 +182,14 @@ Usen Castle was built specifically to reference Lismore Castle, which is in irel
 </p>
 <h2 class="section-heading">12. Evidence of design for intercultural community building</h2>
                    <p>  </p>
-					<a href="#!"><img class="img-fluid" src="assets/img/chapel.jpg" alt="..." />
+					<a href="#!"><img class="img-fluid" src="assets/img/chapel.jpg" alt="..." /></a>
 						<p> First, the chapels -- specifically, the three dedicated to Jewish, Protestant, and Catholic faiths -- were built specifically to shape Brandeis to celebrate different faiths. They were built equal in size and such that their shadows would never overlap one another. Yet, they’re also built close together, with a central pond to reflect the shared nature of the space.  
 
 </p>
 
-
+<p></p>
 					<a href="#!"><img class="img-fluid" src="assets/img/4.12.1flags.jpg" alt="..." />
-						
+						</a>
 <p> Another example of this is this room with flags in a building I forget the name of -- perhaps Rabb Graduate Center? Anyways, this space is central, it has a podium, such that talks can be hosted, and individual chairs for folks to hang out together in. The flags surround this community space, emphasizing the importance that the university places on intercultural involvement.    
 </p>
 
