--- a/Project 4.html
+++ b/Project 4.html
@@ -37,7 +37,7 @@
         </nav>
      
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Renoir-Monet_painting.png/1200px-Renoir-Monet_painting.png')">
+        <header class="masthead" style="background-image: url('https://www.vincentvangogh.org/assets/img/paintings/evening-landscape-with-rising-moon.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
